Layout and Dummy content
Created the layout structure.
Redesigned the footer - footer.html. New footer styles in _layout.scss.
Added new posts with dummy content.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,36 +1,23 @@
 <footer class="site-footer">
 
   <div class="wrapper">
-
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
-
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
-      </div>
+    <div class="footer-content">
+      <h3>lorem ipsum</h3>
+      <p>Qui sit deserunt nostrud fugiat occaecat do fugiat exercitation qui pariatur eiusmod nulla qui. Et sit quis in anim
+        ad culpa Lorem tempor. Est esse veniam duis ex in pariatur. Velit minim quis sit adipisicing eiusmod consectetur
+        nostrud. Aliquip officia non minim officia est ipsum anim pariatur laborum adipisicing enim et incididunt. Do sint
+        amet irure cillum cupidatat dolore ea amet sint in nostrud. Adipisicing qui proident laborum consequat.</p>
+      <p>subscribe <a href="{{ '/feed.xml'| prepend: site.baseurl }}">via RSS</a></p>
+    </div>
+    <div class="footer-social">
+      <ul>
+        <li>
+          <a href="http://twitter.com/{{ site.twitter_username }}"><span class="icon icon--twitter">{% include icon-twitter.svg %}</span> {{ site.twitter_username }} </a>
+        </li>
+        <li>
+          <a href="http://github.com/{{ site.github_username }}"> <span class="icon icon--github">{% include icon-github.svg %}</span><span class="username">{{ include.username }}</span>            {{ site.github_username }} </a>
+        </li>
+      </ul>
     </div>
 
   </div>
