Blog and Project Article Separation
Separated the blog posts and the projects into two different categories and folders.

--- a/_sass/components/_post.scss
+++ b/_sass/components/_post.scss
@@ -18,3 +18,14 @@
   float: none;
   margin: 0 auto;
 }
+.post-tags {
+  margin-left: 0;
+  min-height: 50px;
+  text-align: center;
+  li {
+    display: inline;
+  }
+  img {
+    height: 50px;
+  }
+}
