--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,5 +1,12 @@
-<h2> {{ post.title }} </h2>
+<ul class="post-tags">
+  {% for tag in post.tags %}
+  <li>
+    <img src="/images/icon-{{ tag }}.svg" alt="{{ tag }} icon" size="100x100">
+  </li>
+  {% endfor %}
+</ul>
+<h2> <a href="{{ post.url | prepend:site.baseurl }}"> {{ post.title }} </a></h2>
 <p> {{ post.content | strip_html | strip_newlines | truncate: 200 }} </p>
 <p class="read-more-link">
-  <a href="#">read more...</a>
+  <a href="{{ post.url | prepend:site.baseurl }}">read more...</a>
 </p>
