--- a/css/main.scss
+++ b/css/main.scss
@@ -23,7 +23,7 @@ $spacing-unit:     30px;
 $text-color:       #333;
 $background-color: #fefef3;
 $brand-color:      #fe5f55;
-$blue-color:       #9c55dd;
+$blue-color:       #6495ed;
 $yellow-color:     #0f0;
 $purple-color:     #639;
 
@@ -60,5 +60,6 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting",
         "gradient-bar",
-        "components/post"
+        "components/post",
+        "components/projects"
 ;
