Completed About, Articles, Work and Hire Me Pages
Changed the style on the About page.
Added the Articles and the Work pages and styled them.
Created the Hire Me page, including a skillset score and animation.

--- a/css/main.scss
+++ b/css/main.scss
@@ -61,5 +61,6 @@ $on-laptop:        800px;
         "syntax-highlighting",
         "gradient-bar",
         "components/post",
-        "components/projects"
+        "components/projects",
+        "components/ability"
 ;
