--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,16 @@
 ---
 layout: default
 ---
-<article class="post">
-
+<article class="site-section site-section-last">
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
+    {% if page.featured_image %}
+    <div class="post-image">
+      <img src="{{ page.featured_image }}" alt="{{ page.title }} featured image">
+    </div>
+    {% endif %}
   </header>
-
-  <div class="post-content">
+  <div class="post-body">
     {{ content }}
   </div>
-
 </article>
