--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,7 +1,7 @@
 <ul class="post-tags">
   {% for tag in post.tags %}
   <li>
-    <img src="/images/icon-{{ tag }}.svg" alt="{{ tag }} icon" size="100x100">
+    <img src="{{ site.baseurl }}/images/icon-{{ tag }}.svg" alt="{{ tag }} icon" size="100x100">
   </li>
   {% endfor %}
 </ul>
