--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,5 +1,5 @@
 <li class="project">
-  <a href="{{ project.url }}">
+  <a href="{{ site.baseurl }}{{ project.url }}">
     <figure>
       <img src="{{ site.baseurl }}{{ project.featured_image }}" alt="Thumbnail for {{ project.title }}">
       <figcaption class="project-caption">{{ project.title }}</figcaption>
