--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,9 @@
 
     {% include footer.html %}
 
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/TweenMax.min.js"></script>
+    <script type="text/javascript" src="{{ '/js/index.js' | prepend: site.baseurl }}"></script>
   </body>
 
 </html>
