--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,6 @@
 </nav>
 <header class="site-header gradient-bar">
 
-  <h1 class="site-title mega"><a href="{{ site.baseurl }}">Mihai's Portfolio</a></h1>
+  <h1 class="site-title mega"><a href="{{ site.baseurl }}">Mihai's Programming Blog</a></h1>
 
 </header>
